fix: now compatible in both light and dark mode

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,10 @@
+/* Default light mode variables */
+:root {
+  --background: #ffffff;
+  --foreground: #000000;
+}
 
+/* Dark mode overrides */
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #1D1D1D;
@@ -25,7 +31,6 @@ body {
   padding: 0;
   margin: 0;
   font-family: Jost, sans-serif;
-
 }
 
 a {
